# handler/user.go
@@ -6,16 +6,18 @@ import (
 	"github.com/golang-jwt/jwt"
 	"github.com/labstack/echo/v4"
 	"net/http"
+	"strconv"
 	"time"
 )
 
 // Signup godoc
 // @Summary      Signup
-// @Description  Signs up a user
+// @Description  Register a a user
 // @Accept       json
 // @Produce      json
+// @Param   	 user  body     model.UserSignup     yes  "user signup"
 // @Success      200  {object}  model.User
-// @Router       /signup [get]
+// @Router       /signup [post]
 func (h *Handler) Signup(c echo.Context) (err error) {
 	// Bind
 
@@ -44,7 +46,7 @@ func (h *Handler) Signup(c echo.Context) (err error) {
 // @Description  Login a user
 // @Accept       json
 // @Produce      json
-// @Param   	user  body     model.UserSignup     yes  "user signup"
+// @Param   	 user  body     model.UserSignup     yes  "user signup"
 // @Success      200  {object}  model.User
 // @Router       /login [post]
 func (h *Handler) Login(c echo.Context) (err error) {
@@ -54,7 +56,7 @@ func (h *Handler) Login(c echo.Context) (err error) {
 		return
 	}
 
-	if has, err := h.DB.Get(u); err != nil {
+	if has, err := h.DB.Get(u); err != nil || !has {
 		fmt.Println(err)
 		return &echo.HTTPError{Code: http.StatusUnauthorized, Message: "invalid email or password"}
 	} else {
@@ -105,6 +107,32 @@ func (h *Handler) BookmarksAdd(c echo.Context) (err error) {
 
 }
 
+// BookmarksDelete godoc
+// @Summary      Delete Bookmark
+// @Description  Delete a bookmark from a user
+// @Produce      json
+// @Param        id   path      int  true  "Bookmark ID"
+// @Success      200
+// @Router       /user/bookmarks/{id} [delete]
+func (h *Handler) BookmarksDelete(c echo.Context) (err error) {
+	userID := userIDFromToken(c)
+	bookmarkID, err := strconv.ParseUint(c.Param("id"), 10, 16)
+	if err != nil {
+
+	}
+	affected, err := h.DB.Delete(&model.Bookmark{UserID: userID, ID: uint(bookmarkID)})
+	if affected != 1 {
+		return &echo.HTTPError{Code: http.StatusUnauthorized, Message: "invalid id or token"}
+	}
+	if err != nil {
+		return err
+	}
+	fmt.Println("Deleted bookmark with id", bookmarkID)
+
+	return c.JSON(http.StatusOK, map[string]interface{}{"result": "OK"})
+
+}
+
 // BookmarksList godoc
 // @Summary      ListBookmarks
 // @Description  List Bookmarks from user
@@ -122,7 +150,7 @@ func (h *Handler) BookmarksList(c echo.Context) (err error) {
 	//	return &echo.HTTPError{Code: http.StatusUnauthorized, Message: "invalid user in token"}
 	//}
 	fmt.Println("User id", user.ID)
-	var bookmarks []model.Bookmark
+	bookmarks := make([]model.Bookmark, 0)
 
 	if err := h.DB.Where("user_id = ?", user.ID).Find(&bookmarks); err != nil {
 		fmt.Println("There has been an error", err)
